@@ -22,6 +22,7 @@ Version : 4.12.5 #XG1
 - Added tooltips to tiledata tab (author Dragon Slayer)
 - Added edit function in Tiledata tab to edit Cou text files.
 - Added occupied item counter Items tab.
+- Added Frame Counter.
 
 Version : 4.12.4 #XG1
 - Add About revised, removed more Richtextbox and added a matrix animation with the names of the developers, new links, and new information.
